tests/models/struct/named/unit/fail/ge.rs
use dade::model;
#[model]
struct TestModel {
    #[field(ge = 2)]
    value: (),
}
fn main() {}
