tests/models/struct/named/unit/fail/ge.stderr
error: Support condition is alias, default
 --> tests/models/struct/named/unit/fail/ge.rs:5:5
  |
5 |     value: (),
  |     ^^^^^
